<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright (C) 2013 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
-->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/RelativeLayout1"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="0dp"
    android:background="#747e86"
    android:orientation="vertical">

    <Space
        android:id="@+id/Space3"
        android:layout_width="5dp"
        android:layout_height="wrap_content" />

    <Space
        android:id="@+id/Space2"
        android:layout_width="5dp"
        android:layout_height="wrap_content" />

    <Space
        android:id="@+id/Space1"
        android:layout_width="5dp"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/TextView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="2dp"
                android:layout_marginTop="12dp"
                android:text="@string/label_device_address"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/device_address"
                android:layout_width="220dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/TextView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="2dp"
                android:text="Command:"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/connection_state"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/disconnected"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/TextView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="2dp"
                android:text="@string/label_data"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/data_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="15.10"
                android:text="@string/no_data"
                android:textSize="11sp" />
        </LinearLayout>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="100dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="0dp"
            android:layout_marginTop="0dp"
            android:orientation="vertical">

            <SeekBar
                android:id="@+id/th_bar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:indeterminate="false"
                android:max="200"
                android:maxWidth="10px"
                android:progress="0" />

            <TextView
                android:id="@+id/sendValue"
                android:layout_width="18dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:rotation="90"
                android:text="0" />

            <LinearLayout
                android:layout_width="401dp"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/left_button"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_marginTop="50dp"
                    android:rotation="90"
                    android:text="왼쪽" />

                <Button
                    android:id="@+id/emergency_button"
                    android:layout_width="110dp"
                    android:layout_height="110dp"
                    android:layout_marginLeft="70dp"
                    android:layout_marginTop="10dp"
                    android:requiresFadingEdge="none"
                    android:rotation="90"
                    android:text="STOP"
                    android:textColor="@android:color/holo_red_dark"
                    android:textSize="18sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/back_button"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:rotation="90"
                    android:text="후진" />

                <Button
                    android:id="@+id/fwd_button"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:rotation="90"
                    android:text="전진" />

                <Button
                    android:id="@+id/rec_button"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_marginLeft="100dp"
                    android:rotation="90"
                    android:text="음성" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/right_button"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:rotation="90"
                    android:text="오른쪽" />

            </LinearLayout>

        </LinearLayout>

    </RelativeLayout>

    <TextView
        android:id="@+id/command_view"
        android:layout_width="323dp"
        android:layout_height="297dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="100dp"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="42dp"
        android:layout_alignBottom=""
        android:background="747e86"
        android:orientation="horizontal"
        android:rotation="90"
        android:text="@string/command"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textSize="24sp"
        android:textStyle="normal"></TextView>

</RelativeLayout>